# smart-road-safety-system

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: ui-ux-designer.md
backend/: .env.example  Dockerfile  README_SCRIPTS.md  alembic.ini  pyproject.toml
backend/docs/: performance-tuning.md
backend/src/: main.py
backend/src/api/: __init__.py  accidents.py  admin.py  health.py  hotspots.py
backend/src/core/: auth.py  cache.py  config.py  errors.py  logging.py  middleware.py
backend/src/db/: session.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 001_initial_schema.py
backend/src/models/: __init__.py  accident.py  hotspot.py
backend/src/scripts/: seed_data.py
backend/src/services/: data_ingestion.py  geocoding.py  hotspot_analysis.py  hotspot_service.py
backend/tests/: README_DATABASE.md  conftest.py  test_simple.py
backend/tests/contract/: test_hotspot_detail.py  test_hotspots_in_bounds.py  test_hotspots_nearby.py
backend/tests/integration/: test_full_analysis.py  test_full_ingestion.py  test_hotspot_query_flow.py  test_map_bounds_query.py
backend/tests/unit/: test_admin.py  test_auth.py  test_data_ingestion_a1.py  test_data_ingestion_a2.py  test_data_ingestion_a3.py  test_distance_calculation.py  test_hotspot_analysis_dbscan.py  test_hotspot_stats.py  test_parameter_validation.py
data/: README.md  README_HOTSPOTS.md  etl_moi_a1.py  etl_moi_a2.py  etl_moi_a3.py  fetch_moi_a1.py  fetch_moi_a2.py  fetch_moi_a3.py  generate_hotspots.py  load_moi_a1.py  load_moi_a2.py  load_moi_a3.py  moi_a1_batch.csv  moi_schema.py  pyproject.toml
docs/: WEBVIEW_BRIDGE_QUICK_REFERENCE.md  cron-setup.md  deployment-checklist.md  docker-compose-verification.md  environment-variables.md  hotspot-api-changes.md  microservice_requirements.md
frontend/: .env.example  .eslintrc.json  Dockerfile  cloudbuild.yaml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
scripts/: verify-docker-compose.sh
tests/: __init__.py
(+125 files in other folders)
