[project]
name = "smart-road-safety-backend"
version = "0.1.0"
description = "智慧道路守護系統後端 API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "geoalchemy2>=0.14.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "scikit-learn>=1.3.0",
    "geopy>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests", "../tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-ra",  # 顯示所有測試結果摘要
]
markers = [
    "asyncio: 標記為異步測試",
    "US1: User Story 1 相關測試",
    "US2: User Story 2 相關測試",
    "US3: User Story 3 相關測試",
]
# asyncio_mode 需要 pytest-asyncio >= 0.21.0
# 如果沒有安裝 pytest-asyncio，會出現警告但不會影響測試
# Coverage 選項（需要安裝 pytest-cov）
# 如果沒有安裝 pytest-cov，可以移除以下參數或使用條件式配置
# addopts = [
#     "--strict-markers",
#     "--cov=src",
#     "--cov-report=html",
#     "--cov-report=term-missing",
# ]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
